src/test/testData/annotator/doubleCurlyBracesInInterpolation.luau
a = `<error descr="Double braces are not permitted within interpolated strings; did you mean '\{'?">{</error>{123}}`
